--- a/config/polybar/forest/colors.ini
+++ b/config/polybar/forest/colors.ini
@@ -12,8 +12,8 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-;background = #1F1626
-background = #bc111111
+;background = #cc1F1626
+background = #ac000000
 foreground = #FFFFFF
 sep = #473F4E
 
