--- a/config/polybar/forest/modules.ini
+++ b/config/polybar/forest/modules.ini
@@ -41,7 +41,7 @@ master-mixer = Master
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 10
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -114,7 +114,7 @@ ramp-foreground = ${color.lime}
 type = internal/battery
 
 ; This is useful in case the battery never reports 100% charge
-full-at = 99
+full-at = 100
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
@@ -862,7 +862,7 @@ use-ui-max = false
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 10
+interval = 5
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -1114,3 +1114,9 @@ interval = 1
 
 format-foreground = ${color.cyan}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/notification]
+type = custom/script
+exec = ~/scripts/notif_bar
+tail = true
+interval = 5
