--- a/config/polybar/forest/colors.ini
+++ b/config/polybar/forest/colors.ini
@@ -14,9 +14,8 @@
 ;; main colors
 ;background = #cc1F1626
 background = #ac000000
-foreground = #FFFFFF
+foreground = ${xrdb:color7:#fff}
 sep = #473F4E
-
 white = #FFFFFF
 black = #000000
 red = #EC7875
