--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -17,7 +17,7 @@ music_directory		"~/Music"
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"~/.config/mpd/playlists"
+playlist_directory		"~/.config/mpd/playlist"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -52,7 +52,7 @@ state_file			"~/.config/mpd/state"
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file			"~/.config/mpd/sticker.sql"
+#sticker_file			"~/.mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -98,7 +98,7 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
-#restore_paused "no"
+restore_paused "yes"
 #
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
@@ -117,7 +117,7 @@ sticker_file			"~/.config/mpd/sticker.sql"
 # This setting enables automatic update of MPD's database when files in
 # music_directory are changed.
 #
-#auto_update	"yes"
+auto_update	"yes"
 #
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
@@ -178,7 +178,7 @@ sticker_file			"~/.config/mpd/sticker.sql"
 #
 #database {
 #       plugin "simple"
-#       path "~/.local/share/mpd/db
+#       path "~/.local/share/mpd/db"
 #       cache_directory "~/.local/share/mpd/cache"
 #}
 #
@@ -283,7 +283,7 @@ input {
 #}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
-
+#
 audio_output {
 	type		"pulse"
 	name		"My Pulse Output"
@@ -291,7 +291,7 @@ audio_output {
 #	sink		"remote_server_sink"	# optional
 #	media_role	"media_role"		#optional
 }
-
+#
 # An example of a winmm output (Windows multimedia API).
 #
 #audio_output {
@@ -376,7 +376,7 @@ audio_output {
 # more details about ReplayGain.
 # This setting is off by default.
 #
-#replaygain			"album"
+#replaygain			"auto"
 #
 # This setting sets the pre-amp used for files that have ReplayGain tags. By
 # default this setting is disabled.
