--- a/config/polybar/forest/config.ini
+++ b/config/polybar/forest/config.ini
@@ -139,7 +139,7 @@ font-3 = "Noto Sans CJK JP:size=10:antialias=true;0"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = mode sep workspaces sep cpu memory temperature filesystem
+modules-left = mode sep i3 sep cpu memory temperature filesystem
 modules-center = mpdtitle mpd sep date
 modules-right = battery network sep volume brightness 
 
