--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -52,6 +52,8 @@ window:
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: false
 
+  opacity: 0.8
+
   # Window decorations
   #
   # Values for `decorations`:
@@ -339,7 +341,6 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
 
 #selection:
   # This string contains all characters that are used as separators for
