--- a/config/cava/config
+++ b/config/cava/config
@@ -148,12 +148,12 @@
  gradient_count=6
 
 
- gradient_color_1 = '#3D5C83'
- gradient_color_2 = '#556D8A'
- gradient_color_3 = '#738694'
- gradient_color_4 = '#A09A93'
- gradient_color_5 = '#D5B091'
- gradient_color_6 = '#F3D7A3'
+ gradient_color_1 = '#296A87'
+ gradient_color_2 = '#306E8B'
+ gradient_color_3 = '#626785'
+ gradient_color_4 = '#A96F88'
+ gradient_color_5 = '#B08AA3'
+ gradient_color_6 = '#F49058'
 [smoothing]
 
 # Percentage value for integral smoothing. Takes values from 0 - 100.
