--- a/config/polybar/forest/modules.ini
+++ b/config/polybar/forest/modules.ini
@@ -475,20 +475,20 @@ label-unmounted = " %mountpoint%: NA"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;;[module/i3]
-;;type = internal/i3
+[module/i3]
+type = internal/i3
 
 ; Only show workspaces defined on the same output as the bar
-;
+
 ; Useful if you want to show monitor specific workspaces
 ; on different bars
 ;
 ; Default: false
-;;pin-workspaces = true
+;pin-workspaces = true
 
 ; This will split the workspace name on ':'
 ; Default: false
-;;strip-wsnumbers = true
+strip-wsnumbers = true
 
 ; Sort the workspaces by index instead of the default
 ; sorting that groups the workspaces by output
@@ -532,14 +532,14 @@ label-unmounted = " %mountpoint%: NA"
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
-;;format = <label-state> <label-mode>
+format = <label-state> <label-mode>
 
 ; Available tokens:
 ;   %mode%
 ; Default: %mode%
-;;label-mode = %mode%
-;;label-mode-padding = 2
-;;label-mode-background = #e60053
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = #e60053
 
 ; Available tokens:
 ;   %name%
@@ -547,11 +547,11 @@ label-unmounted = " %mountpoint%: NA"
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-focused = %index%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-;;label-focused-padding = 4
+label-focused = %index%
+label-focused-foreground = ${color.pink} 
+label-focused-background = #3f3f3f
+label-focused-underline = #fba922
+label-focused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -559,8 +559,8 @@ label-unmounted = " %mountpoint%: NA"
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
+label-unfocused = %index%
+label-unfocused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -568,9 +568,9 @@ label-unmounted = " %mountpoint%: NA"
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
+label-visible = %index%
+label-visible-underline = #555555
+label-visible-padding = 0
 
 ; Available tokens:
 ;   %name%
@@ -578,15 +578,15 @@ label-unmounted = " %mountpoint%: NA"
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-;;label-urgent = %index%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
+label-urgent = %index%
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-padding = 4
 
 ; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
+label-separator = 
+label-separator-padding = 2
+label-separator-foreground = #ffb52a
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -914,7 +914,7 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/virtual/hwmon/hwmon4/temp1_input
+hwmon-path = /sys/devices/platform/dell_smm_hwmon/hwmon/hwmon4/temp1_input
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
