--- a/config/vlc/vlc-qt-interface.conf
+++ b/config/vlc/vlc-qt-interface.conf
@@ -1,9 +1,9 @@
 [General]
-filedialog-path=@Variant(\0\0\0\x11\0\0\0\xf6\x66ile:///home/harshan/Documents/Music/unsorted%20japanese/Assorted/%E3%82%A2%E3%82%A4%E3%83%8D%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%8D%20(%E7%B1%B3%E6%B4%A5%E7%8E%84%E5%B8%AB)%20acoustic%20arrange%20ver.%E3%83%80%E3%82%BA%E3%83%93%E3%83%BC%20COVER.mp3)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x85\0\0\0\x36\0\0\x4\xfa\0\0\x4-\0\0\x2\x87\0\0\0\x38\0\0\x4\xf8\0\0\x4+\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x87\0\0\0\x38\0\0\x4\xf8\0\0\x4+)
+filedialog-path=@Variant(\0\0\0\x11\0\0\0\r/home/harshan)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\n\0\0\0>\0\0\au\0\0\x4-\0\0\0\r\0\0\0\x41\0\0\ar\0\0\x4*\0\0\0\0\0\0\0\0\a\x80\0\0\0\r\0\0\0\x41\0\0\ar\0\0\x4*)
 
 [Epanel]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xd8\0\0\0\x8b\0\0\x4\x1e\0\0\x2\x87\0\0\x1\xda\0\0\0\x8d\0\0\x4\x1c\0\0\x2\x85\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xda\0\0\0\x8d\0\0\x4\x1c\0\0\x2\x85)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xfd\0\0\x1K\0\0\x3\xc5\0\0\x2\xed\0\0\x2\0\0\0\x1N\0\0\x3\xc2\0\0\x2\xea\0\0\0\0\0\0\0\0\a\x80\0\0\x2\0\0\0\x1N\0\0\x3\xc2\0\0\x2\xea)
 
 [FullScreen]
 pos=@Point(0 0)
@@ -11,23 +11,34 @@ screen=@Rect(0 0 0 0)
 wide=false
 
 [MainWindow]
-adv-controls=0
-bgSize=@Size(1896 548)
+AdvToolbar="12;11;13;14;"
+FSCtoolbar="0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+InputToolbar="43;33-4;44;"
+MainToolbar1="64;39;64;38;65;"
+MainToolbar2="0-2;64;3;1;4;64;7;9;64;10;20;19;64-4;37;65;35-4;"
+ToolbarPos=false
+adv-controls=4
+bgSize=@Size(939 914)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
-[Playlist]
-headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\r\xec\x1f\0\0\0\n\0\0\0\f\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\x6\xae\0\0\0\r\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\r\0\0\0\xc8\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x5\x96\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
-leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\xff\xff\xff\xff\x1\0\0\0\x2\0)
-splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xb4\0\0\x1\xa4\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
-view-mode=1
-zoom=0
-
 [RecentsMRL]
-list=file:///home/harshan/Music/Eng/Alan%20Walker/Alan%20Walker%20%26%20A%24AP%20Rocky%20-%20Live%20Fast%20%28PUBGM%29.mp3, file:///home/harshan/Documents/Music/unsorted%20japanese/Assorted/%E3%82%A2%E3%82%A4%E3%83%8D%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%8D%20(%E7%B1%B3%E6%B4%A5%E7%8E%84%E5%B8%AB)%20acoustic%20arrange%20ver.%E3%83%80%E3%82%BA%E3%83%93%E3%83%BC%20COVER.mp3, file:///home/harshan/Music/Nightcore/Nightcore%20-%20Cry%20Me%20A%20River.mp3, file:///home/harshan/Music/Nightcore/Nightcore%20-%20Umbrella%20(Lyrics).mp3, file:///home/harshan/Music/unsorted%20japanese/Assorted/Naimononedari%20Revenge%20the%20First%20Take.mp3, file:///home/harshan/Music/unsorted%20japanese/Assorted/%E4%B8%8D%E5%8F%AF%E8%A7%A3.mp3, file:///home/harshan/Music/unsorted%20japanese/Assorted/%E3%82%A2%E3%82%A4%E3%83%8D%E3%82%AF%E3%83%A9%E3%82%A4%E3%83%8D%20(%E7%B1%B3%E6%B4%A5%E7%8E%84%E5%B8%AB)%20acoustic%20arrange%20ver.%E3%83%80%E3%82%BA%E3%83%93%E3%83%BC%20COVER.mp3, file:///home/harshan/Music/%E5%89%B5%E4%BD%9C/05%20%E3%83%A8%E3%83%AB%E3%82%B7%E3%82%AB%20-%20%E5%98%98%E6%9C%88.flac, file:///home/harshan/Music/%E5%89%B5%E4%BD%9C/04%20%E3%83%A8%E3%83%AB%E3%82%B7%E3%82%AB%20-%20%E9%A2%A8%E3%82%92%E9%A3%9F%E3%82%80.flac, file:///home/harshan/Music/%E5%89%B5%E4%BD%9C/03%20%E3%83%A8%E3%83%AB%E3%82%B7%E3%82%AB%20-%20%E5%89%B5%E4%BD%9C.flac, file:///home/harshan/Music/%E5%89%B5%E4%BD%9C/02%20%E3%83%A8%E3%83%AB%E3%82%B7%E3%82%AB%20-%20%E6%98%A5%E6%B3%A5%E6%A3%92.flac, file:///home/harshan/Music/%E5%89%B5%E4%BD%9C/01%20%E3%83%A8%E3%83%AB%E3%82%B7%E3%82%AB%20-%20%E5%BC%B7%E7%9B%97%E3%81%A8%E8%8A%B1%E6%9D%9F.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20main%20actor.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20Prologue.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20%E3%83%A9%E3%82%A4%E3%83%A9%E3%83%83%E3%82%AF.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20%E3%83%9B%E3%83%AD%E3%83%8D%E3%82%B9.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20%E3%82%AB%E3%83%AF%E3%82%AD%E3%83%B2%E3%82%A2%E3%83%A1%E3%82%AF.flac, file:///home/harshan/Music/Japanese/%E7%BE%8E%E6%B3%A2/%E7%BE%8E%E6%B3%A2%20-%20%E3%82%A2%E3%83%A1%E3%83%B2%E3%83%9E%E3%83%84%E3%80%81.flac, file:///home/harshan/Music/Japanese/Yoasobi/YOASOBI%E7%BE%A4%E9%9D%92Official%20Music%20Video.mp3, file:///home/harshan/Music/Japanese/Yoasobi/YOASOBI%E6%80%AA%E7%89%A9Official%20Music%20Video%E3%80%80(YOASOBI%20-%20Monster).mp3, file:///home/harshan/Music/Japanese/Yoasobi/YOASOBI%E5%A4%9C%E3%81%AB%E9%A7%86%E3%81%91%E3%82%8B%20Official%20Music%20Video.mp3, file:///home/harshan/Music/Japanese/Yoasobi/YOASOBI%E3%83%8F%E3%83%AB%E3%82%B8%E3%82%AA%E3%83%B3Official%20Music%20Video.mp3, file:///home/harshan/Music/Japanese/Yoasobi/YOASOBI%E3%81%82%E3%81%AE%E5%A4%A2%E3%82%92%E3%81%AA%E3%81%9E%E3%81%A3%E3%81%A6%20Official%20Music%20Video.mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20Redemption.mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20Reaper%20(RIELL)%20-%20(Lyrics).mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20Hate%20YouParoles.mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20DARKSIDE%20(Lyrics).mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20Army.mp3, file:///home/harshan/Music/Nightcore/RIELL/Nightcore%20-%20Animal%20(Lyrics).mp3, "file:///home/harshan/Music/Japanese/Assorted/[ORIGINAL%20SONG]%20%E5%A4%B1%E7%A4%BC%E3%81%97%E3%81%BE%E3%81%99%E3%81%8C%E3%80%81RIP%E2%99%A1%20%E2%80%9CExcuse%20My%20Rudeness,%20But%20Could%20You%20Please%20RIP%20%E2%80%9D%20-%20Calliope%20Mori.mp3"
-times=0, 0, 0, 0, -1, 0, 0, 0, 104200, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+list=file:///home/harshan/Music/Eng/DJ%20Snake/DJ%20Snake%20-%20Magenta%20Riddim.mp3, file:///home/harshan/Documents/Music/unsorted%20Eng/Assorted/Lil%20Nas%20X%20-%20Old%20Town%20Road%20%28Official%20Video%29%20ft.%20Billy%20Ray%20Cyrus.mp3, file:///home/harshan/Documents/Music/unsorted%20Eng/Assorted/Clean%20Bandit%20-%20Symphony%20feat.%20Zara%20Larsson.mp3, file:///home/harshan/Documents/Music/unsorted%20japanese/Assorted/%5BLyrics%5D%20%E3%83%8F%E3%83%AC%E3%83%8F%E3%83%AC%E3%83%A4Harehare%20Ya%20-%20Cover%20by%20Kityod%E7%8C%AB%E7%91%BE%E9%86%92%E4%BA%86%E5%90%97%20%28full%29.mp3, file:///home/harshan/Documents/Music/unsorted%20japanese/Assorted/Naimononedari%20Revenge%20the%20First%20Take.mp3, file:///home/harshan/Documents/Music/unsorted%20japanese/Assorted/%E4%B8%8D%E5%8F%AF%E8%A7%A3.mp3, file:///home/harshan/Music/Japanese/Various%20Artists/ROAR/%E7%9D%A1%E9%AD%94%20%E7%BC%B6%E7%BC%B6.mp3, file:///home/harshan/Downloads/mv_-6314644680976630972.mp3, file:///home/harshan/Music/Various%20Artists/ROAR/%E7%9D%A1%E9%AD%94%20%E7%BC%B6%E7%BC%B6.mp3, file:///home/harshan/Music/indigo%20la%20End/%E5%86%AC%E5%A4%9C%E3%81%AE%E3%83%9E%E3%82%B8%E3%83%83%E3%82%AF/indigo%20la%20End%E3%80%8C%E5%86%AC%E5%A4%9C%E3%81%AE%E3%83%9E%E3%82%B8%E3%83%83%E3%82%AF%E3%80%8D.mp3, file:///home/harshan/Music/yama/Oz_/yama%E3%80%8EOz.%E3%80%8FMV.mp3, file:///home/harshan/Projects/youtube/effects/the%20man%20the%20myth%20the%20beast.mp3, file:///home/harshan/Videos/Anime/%5BAnime%20Time%5D%20Saenai%20Heroine%20No%20Sodatekata/s1/Saenai%20Heroine%20No%20Sodatekata%20-%2000.mkv, file:///home/harshan/Videos/Marvel/What%20if/What.If.2021.S01E03.What.If.The.World.Lost.Its.Mightiest.Heroes.1080p.DSNP.WEBRip.DDP5.1.x264-FLUX%5BTGx%5D/What.If.2021.S01E03.What.If.The.World.Lost.Its.Mightiest.Heroes.1080p.DSNP.WEB-DL.DDP5.1.Atmos.H.264-FLUX.mkv, file:///home/harshan/Documents/Music/TAMIL/Enna%20Nadanthalum%20.mp3, file:///home/harshan/Documents/Music/TAMIL/Dhom%20Dhom.mp3, file:///home/harshan/Documents/Music/TAMIL/Club%20Le%20Mabbu%20Le.mp3, file:///home/harshan/Documents/Music/TAMIL/Chill%20Bro%20Pattas%20Dhanush%20Vivek%20-%20Mervin%20Sathya%20Jyothi%20Films.mp3, file:///home/harshan/Documents/Music/TAMIL/Chalmaar%20.mp3, file:///home/harshan/Documents/Music/TAMIL/Breakup%20Song.mp3, file:///home/harshan/Documents/Music/TAMIL/Ajukku%20Gumukku.mp3, file:///home/harshan/Documents/Music/TAMIL/Aathadi-MassTamilan.org.mp3, file:///home/harshan/Documents/Music/TAMIL/3%20-%20Po%20Nee%20Po%20Tamil%20Dhanush%2C%20Shruti%20Anirudh.mp3, file:///home/harshan/Music/Anime/YUI/YUI%20-%20again.mp3, file:///home/harshan/Music/Anime/Yoh%20Kamiyama/Yoh%20Kamiyama%20-%20Irokousui.mp3, file:///home/harshan/Music/Anime/Peggies/Peggies%20-%20Centimeter.mp3, file:///home/harshan/Music/Anime/MADKID/MADKID%20-%20RISE.mp3, file:///home/harshan/Music/Anime/MADKID/MADKID%20-%20FAITH.mp3, file:///home/harshan/Music/Anime/KSUKE%20feat.%20Tyler%20Carter/KSUKE%20feat.%20Tyler%20Carter%20-%20Contradiction.mp3, file:///home/harshan/Music/Anime/Ikimono-gakari/Ikimono-gakari%20-%20Blue%20bird.mp3
+times=0, 122331, 0, 0, 32781, 29776, 0, 0, 0, 0, 0, 0, 0, 150691, 57310, 0, 47331, 130818, 0, 0, 0, 0, 0, 146644, 0, 0, 0, 0, 0, 0
 
-[playlistdialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x94\0\0\0\xbe\0\0\x4\xeb\0\0\x3y\0\0\x2\x94\0\0\0\xbe\0\0\x4\xeb\0\0\x3y\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x94\0\0\0\xbe\0\0\x4\xeb\0\0\x3y)
+[ToolbarProfiles]
+1\ProfileName=VLC 2.x.x Style
+1\Value="0|64;39;64;38;65;|0-2;64;3;1;4;64;7;9;64;10;20;19;64-4;37;65;35-4;|12;11;13;14;|43;33-4;44;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+2\ProfileName=VLC 1.1.x Style
+2\Value="0|64;39;64;38;65;|0-2;64;3;1;4;64;7;10;9;64-4;20;19;64-4;37;65;35-4;|12;11;13;14;|5-1;33;6-1;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+3\ProfileName=VLC 0.8.x Style
+3\Value="1|64;39-1;64;38;|2-1;32-4;0-5;1-5;32-5;3-5;5-5;6-5;4-5;32-5;10-1;64-1;35-1;65;|12-1;11-1;13-1;14-1;|33;37-4;|0-5;1-5;32-1;1-5;5-1;6-1;4-5;32-1;12-5;11-1;65;34-4;35-1;"
+4\ProfileName=Minimalist Style
+4\Value="0|64;65;|0-7;64;3-1;1-5;4-1;64;12-5;64-5;37-5;38-5;64-4;10-1;65;36-4;|11-5;13-5;14-5;|5-1;33;6-1;|0-5;64;3-5;1-5;4-5;64;12-5;65;34-4;35-1;"
+5\ProfileName=One-Liner Style
+5\Value="0|64;38;65;|0-4;64;3;1;4;64;7;10;9;64-4;39;64-4;37;65;36-4;|12;11;14;13;|5-1;33;6-1;|0-2;64;3;1;4;64;37;64;38;64;8;65;25;35-4;34;"
+6\ProfileName=Simplest Style
+6\Value="0||36-4;65-4;0-7;4-5;1-5;65-4;7-5;|12-4;11;13;||36-4;65-4;0-5;4-5;1-5;65;8-5;"
+size=6
